--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "animate.css": "^4.1.0",
-    "bulma": "^0.9.0",
-    "stimulus": "^1.1.1",
-    "turbolinks": "^5.2.0"
+    "bulma": "^0.9.0"
   },
   "version": "0.1.0",
   "devDependencies": {}
