--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@rails/webpacker": "5.4.3",
     "animate.css": "^4.1.0",
     "bulma": "^0.9.0"
   },
